--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
@@ -54,7 +54,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/farmerRequestPickupSetPickupLocationEnterAddress"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
         android:layout_marginStart="84dp"
