--- a/app/src/main/res/layout/activity_transporter_view_schedule.xml
+++ b/app/src/main/res/layout/activity_transporter_view_schedule.xml
@@ -75,14 +75,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/transporterViewScheduleAddTripButton"
+        android:id="@+id/transporterViewScheduleSetAvailabilityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="+ Trip"
+        android:text="Set Availability"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
