--- a/app/src/main/res/layout/activity_farmer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_farmer_edit_profile.xml
@@ -29,13 +29,14 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
         android:padding="20dp"
         android:scaleType="centerCrop"
         android:src="@drawable/profile" />
+        <!-- @Arka get a profile picture from the database -->
 
     <RelativeLayout
         android:id="@+id/profile_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/header_cover_image"
-        android:background="#ebca0707"
+        android:background="@android:color/holo_green_light"
         android:elevation="4dp"
         android:paddingBottom="24dp">
 
@@ -49,6 +50,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:textColor="#fff"
             android:textSize="24sp"
             android:textStyle="bold" />
+        <!-- @Arka change android:text= "Jose Cartolos" to the user's name -->
 
         <TextView
             android:id="@+id/user_profile_short_bio"
@@ -58,8 +60,33 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
             android:text="yo amo el aguacate"
+
             android:textColor="#fff"
             android:textSize="14sp" />
+
+        <EditText
+            android:id="@+id/profile_edit_short_bio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_profile_name"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:text="yo amo el aguacate"
+            android:hint="Bio"
+            android:textColor="#fff"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/farmerSaveChangesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="Save Changes" />
+
+        <!-- @Arka change android:text="yo amo el aguacate" to the user's bio -->
+
 
     </RelativeLayout>
 
@@ -72,26 +99,62 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/user_profile_phoneNumber"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="#fff"
-            android:clickable="true"
+            android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
             android:text="Phone Number: 123-456-7890" />
+        <!-- @Arka change phone number -->
 
         <TextView
+            android:id="@+id/user_profile_address"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_marginBottom="3dp"
             android:layout_marginTop="3dp"
             android:background="#fff"
-            android:clickable="true"
+            android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
             android:text="Address: # 55, Suesca-Cucunubá, Las Vegas, Suesca, Cundinamarca, Colombia" />
+        <!-- @Arka change address -->
+
+        <EditText
+            android:id="@+id/profile_edit_phoneNumber"
+            android:inputType= "phone"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="#fff"
+            android:clickable="true"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="Phone Number: 123-456-7890"
+            android:hint="Phone Number"/>
+        <!-- @Arka change phone number -->
+
+        <EditText
+            android:id="@+id/profile_edit_address"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="Address: # 55, Suesca-Cucunubá, Las Vegas, Suesca, Cundinamarca, Colombia"
+            android:hint="Address"/>
+        <!-- @Arka change address -->
+
+<!--
+        These are potential other profile information that could be useful to add in later
 
         <TextView
             android:layout_width="fill_parent"
@@ -102,6 +165,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:elevation="4dp"
             android:padding="20dp"
             android:text="Crops Sold: Avocado" />
+        @Arka up to you if you want to keep this or add another database item
 
         <TextView
             android:layout_width="fill_parent"
@@ -112,7 +176,18 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:elevation="4dp"
             android:padding="20dp"
             android:text="Preferred Pickup Location: Farm, Town Centre" />
-
+        @Arka up to you if you want to keep this or add another database item
+    -->
     </LinearLayout>
-</RelativeLayout>
+
+        <Button
+            android:id="@+id/farmerEditProfileButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="Edit Profile" />
+
+    </RelativeLayout>
 </ScrollView>
