--- a/app/src/main/res/layout/activity_farmer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_farmer_edit_profile.xml
@@ -46,13 +46,13 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="76dp"
-            android:text="Jose Cartolos"
+            android:text=""
             android:textColor="#fff"
             android:textSize="24sp"
             android:textStyle="bold" />
         <!-- @Arka change android:text= "Jose Cartolos" to the user's name -->
-
-        <TextView
+        <!--
+       <TextView
             android:id="@+id/user_profile_short_bio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,8 +62,9 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:text="yo amo el aguacate"
 
             android:textColor="#fff"
-            android:textSize="14sp" />
-
+            android:textSize="14sp" />*/
+        -->
+        <!--
         <EditText
             android:id="@+id/profile_edit_short_bio"
             android:layout_width="wrap_content"
@@ -75,7 +76,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:hint="Bio"
             android:textColor="#fff"
             android:textSize="14sp" />
-
+        -->
         <Button
             android:id="@+id/farmerSaveChangesButton"
             android:layout_width="wrap_content"
@@ -107,7 +108,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Phone Number: 123-456-7890" />
+            android:text="Phone Number: " />
         <!-- @Arka change phone number -->
 
         <TextView
@@ -121,7 +122,46 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Address: # 55, Suesca-Cucunubá, Las Vegas, Suesca, Cundinamarca, Colombia" />
+            android:text="Address: " />
+
+        <TextView
+            android:id="@+id/user_profile_city"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="City: " />
+
+        <TextView
+            android:id="@+id/user_profile_postalcode"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="Postal Code: " />
+
+        <TextView
+            android:id="@+id/user_profile_country"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="Country: " />
         <!-- @Arka change address -->
 
         <EditText
@@ -134,7 +174,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:clickable="true"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Phone Number: 123-456-7890"
+            android:text="Phone Number: "
             android:hint="Phone Number"/>
         <!-- @Arka change phone number -->
 
@@ -149,7 +189,49 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Address: # 55, Suesca-Cucunubá, Las Vegas, Suesca, Cundinamarca, Colombia"
+            android:text="Address: "
+            android:hint="Address"/>
+
+        <EditText
+            android:id="@+id/profile_edit_city"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="City: "
+            android:hint="Address"/>
+
+        <EditText
+            android:id="@+id/profile_edit_postalcode"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="Postal Code: "
+            android:hint="Address"/>
+
+        <EditText
+            android:id="@+id/profile_edit_country"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            android:background="#fff"
+            android:clickable="false"
+            android:elevation="4dp"
+            android:padding="20dp"
+            android:text="Country: "
             android:hint="Address"/>
         <!-- @Arka change address -->
 
